Organize js files

--- a/SpiderGame.htm
+++ b/SpiderGame.htm
@@ -28,6 +28,8 @@
 	<body>
 		<div class="pleasewait" id="loading"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
 		<div id="content" oncontextmenu="return false;"></div>
+		<script src="phaser.min.js"></script>
+		<script src="isWebGLAvailable.min.js"></script>
 		<script src="SpiderGame.js"></script>
 	</body>
 </html>
